# autotools-example

./: Makefile.in  README  clean  configure.ac
src/: Makefile.in  jupiter  main.c
